Woche 3: Set realisiert als Baum

--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,10 @@ img {
   max-width: 100%;
 }
 
+.imgcols img {
+  vertical-align: top;
+}
+
 /* Custom CSS for pages */
 .figcenter {
   text-align: center;
